five day icons working

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
       <h2 id="city-searched" class="display-4">City</h2>
       <p id="date-icon" class="lead"></p>
       <hr class="my-4">
-      <p id="ul-current"></p>
-      <p class="lead">
+      <p>
+        <img id="icon" src=" ">
+      </p>
+      <p id="ul-current" class="lead">
       </p>
     </div>
 
@@ -40,7 +42,7 @@
     <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 id="date1" class="card-title"></h5>
-          <h6 id="icon1" class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <h6 class="card-subtitle mb-2 text-muted"><img id="icon1" src=" "></h6>
           <p id="ul1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
@@ -51,7 +53,7 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 id="date2" class="card-title"></h5>
-          <h6 id="icon2" class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <h6 class="card-subtitle mb-2 text-muted"><img id="icon2" src=" "></h6>
           <p id="ul2" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
@@ -62,7 +64,7 @@
       <div id="day3" class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 id="date3" class="card-title"></h5>
-          <h6 id="icon3" class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <h6 class="card-subtitle mb-2 text-muted"><img id="icon3" src=" "></h6>
           <p id="ul3" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
@@ -73,7 +75,7 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 id="date4" class="card-title"></h5>
-          <h6 id="icon4" class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <h6 class="card-subtitle mb-2 text-muted"><img id="icon4" src=" "></h6>
           <p id="ul4" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
@@ -84,7 +86,7 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 id="date5" class="card-title"></h5>
-          <h6 id="icon5" class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+          <h6 class="card-subtitle mb-2 text-muted"><img id="icon5" src=" "></h6>
           <p id="ul5" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           <a href="#" class="card-link">Card link</a>
           <a href="#" class="card-link">Another link</a>
