--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="card-body">
           <h5 id="date1" class="card-title"></h5>
           <h6 class="card-subtitle mb-2 text-muted"><img id="icon1" src=" "></h6>
-          <p id="ul1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <p id="ul1" class="card-text"></p>
+          <a href="#" class="card-link"></a>
+          <a href="#" class="card-link"></a>
         </div>
       </div>
 
@@ -54,9 +54,9 @@
         <div class="card-body">
           <h5 id="date2" class="card-title"></h5>
           <h6 class="card-subtitle mb-2 text-muted"><img id="icon2" src=" "></h6>
-          <p id="ul2" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <p id="ul2" class="card-text"></p>
+          <a href="#" class="card-link"></a>
+          <a href="#" class="card-link"></a>
         </div>
       </div>
 
@@ -65,9 +65,9 @@
         <div class="card-body">
           <h5 id="date3" class="card-title"></h5>
           <h6 class="card-subtitle mb-2 text-muted"><img id="icon3" src=" "></h6>
-          <p id="ul3" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <p id="ul3" class="card-text"></p>
+          <a href="#" class="card-link"></a>
+          <a href="#" class="card-link"></a>
         </div>
       </div>
 
@@ -76,9 +76,9 @@
         <div class="card-body">
           <h5 id="date4" class="card-title"></h5>
           <h6 class="card-subtitle mb-2 text-muted"><img id="icon4" src=" "></h6>
-          <p id="ul4" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <p id="ul4" class="card-text"></p>
+          <a href="#" class="card-link"></a>
+          <a href="#" class="card-link"></a>
         </div>
       </div>
 
@@ -87,9 +87,9 @@
         <div class="card-body">
           <h5 id="date5" class="card-title"></h5>
           <h6 class="card-subtitle mb-2 text-muted"><img id="icon5" src=" "></h6>
-          <p id="ul5" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+          <p id="ul5" class="card-text"></p>
+          <a href="#" class="card-link"></a>
+          <a href="#" class="card-link"></a>
         </div>
       </div>
 
