updated style for results div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--date-icon will have dat and weather icon-->
 
     <div class="jumbotron">
-      <h2 id="city-searched" class="display-4">City</h2>
+      <h2 id="city-searched" class="display-4"></h2>
       <p id="date-icon" class="lead"></p>
       <hr class="my-4">
       <p>
