updated bkgrnd image for two divs

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <!--end search form-->
 
     <!--display currebt weather-->
-    <!--date-icon will have dat and weather icon-->
+    <!--date-icon will have dat and weather icon--> 
 
-    <div class="jumbotron">
+    <div class="results1">
       <h2 id="city-searched" class="display-4"></h2>
       <p id="date-icon" class="lead"></p>
       <hr class="my-4">
