adjusted style on image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
     <!--search form-->
   <div id="search">
-    <h2>Search for a City</h2>
+    <h2 style="margin-left: 40vw;">Search for a City</h2>
     <div class="input-group">
         <input id="input" type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
         <button id="button" type="button" class="btn btn-outline-primary">search</button>
@@ -29,10 +29,10 @@
       <h2 id="city-searched" class="display-4"></h2>
       <p id="date-icon" class="lead"></p>
       <hr class="my-4">
-      <p>
+      <p class="icon-primary">
         <img id="icon" src=" ">
       </p>
-      <p id="ul-current" class="lead">
+      <p id="ul-current">
       </p>
     </div>
 
